# Side_Project_2026

./: .env.example  .gitignore  CHARACTER_PROFILING_INSTRUCTIONS.md  Makefile  README.md  clean_characters.py  clean_glossary.py  fix_names.py  fix_utils_shims.py  main.py  patch_app.py  patch_cli.py  patch_pipeline.py  patch_settings.py  pyproject.toml  readme.md  requirements.txt  retranslate.py  translate.py  translateAGENT_INSTRUCTIONS.md
core/: ai_client.py  arc_memory.py  characters.py  config.py  glossary.py  io_utils.py  models.py  name_lock.py  prompt.py  runner.py  scout.py  skills.py  token_budget.py
deployments/: Dockerfile
prompts/: bible_scan.md  character_profile.md  epub_cut_agent.md  epub_pattern_learner.md  epub_structure_analyst.md  system_agent.md
src/littrans/: __init__.py  cli.py
src/littrans/bible/: bible_consolidator.py  bible_exporter.py  bible_prompt_builder.py  bible_query.py  bible_scanner.py  bible_store.py  cross_reference.py  pipeline_bible_patch.py  schemas.py
src/littrans/cli/: commands.py  tool_clean_chars.py
src/littrans/config/: settings.py
src/littrans/context/: bible_cli.py  bible_enricher.py  bible_scanner.py  char_history.py  characters.py  memory.py  name_lock.py  skills.py
src/littrans/core/: patterns.py  pipeline.py  post_analyzer.py  post_processor.py  prompt_builder.py  quality_guard.py  scout.py  text_normalizer.py
src/littrans/engine/: __init__.py  pipeline.py  post_analyzer.py  prompt_builder.py  quality_guard.py  scout.py
src/littrans/llm/: __init__.py  client.py  schemas.py  token_budget.py
(+21 files in other folders)
